--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="header-content-inner">
                 <h1>Hip, cool, neat <br /> web solutions</h1>
                 <hr>
-                <p>Web design, development, hosting, and everything.</p>
+                <p>Web consulting, design, and development.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -125,22 +125,22 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-codepen wow bounceIn text-primary"></i>
-                        <h3>Web Design</h3>
-                        <p class="text-muted">We design and adapt material to look good on every device.</p>
+                        <h3>Consulting</h3>
+                        <p class="text-muted">We work with you to specify <em>requirements</em> to translate your ideas into a well-defined project.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Development</h3>
-                        <p class="text-muted">Databases, content management, web services, mobile apps.</p>
+                        <h3>Execution</h3>
+                        <p class="text-muted">We build apps and websites. We design and develop, or work with your existing talent.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-pie-chart wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>Full service</h3>
-                        <p class="text-muted">Secure hosting, domain names, email servers, and social integration.</p>
+                        <h3>Support</h3>
+                        <p class="text-muted">We offer secure hosting, domain names, email servers, mobile apps, and social integration.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -494,8 +494,10 @@
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
                     <img src="img/portrait.jpg" alt="">
-                    <p>Ready to start your next project with us? That's great! Call or email me, Eddie Bowen, and I'll get back to you as soon as possible!</p>
+                    <p>Have a project you need to see delivered? Call or email me, Eddie Bowen.</p>
                     <p>Just want to meet to learn more about us? That's cool too!</p>
+                    <hr class="primary">
+                
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
@@ -503,7 +505,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">eddie@cosmo7.com</a></p>
+                    <p><a href="mailto:eddie@cosmo7.com">eddie@cosmo7.com</a></p>
                 </div>
             </div>
         </div>
@@ -522,7 +524,5 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/creative.js"></script>
-
 </body>
-
 </html>
