change email address

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">What we do</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -505,7 +505,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:eddie@cosmo7.com">eddie@cosmo7.com</a></p>
+                    <p><a href="mailto:eddie@defaultcompany.com">eddie@defaultcompany.com</a></p>
                 </div>
             </div>
         </div>
