add dooley, agile section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="css/font-awesome-animation.min.css" type="text/css">
 
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
@@ -189,6 +191,42 @@
                             <li class="item">Azure</li>
                         </ul>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="agile">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-lg-offset-3 text-center">
+                    <h2 class="section-heading">We're agile</h2>
+
+                    <i class="fa fa-huge faa-spin animated fa-refresh" data-wow-delay=".3s"></i>
+
+                    <p>Agile means that we work by <em>iteration</em>.</p>
+
+                    <span class="fa-stack fa-2x wow bounceIn text-primary">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <strong class="fa-stack-1x fa-inverse">1</strong>
+                    </span>
+
+                    <p>We start every product with a placeholder and a URL. You have something you can look at, show your colleagues, get opinions on.</p>
+
+                    <span class="fa-stack fa-2x wow bounceIn text-primary">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <strong class="fa-stack-1x fa-inverse">2</strong>
+                    </span>
+
+                    <p>We then <em>develop</em> that product by iteration, from placeholder to prototype to finished product.</p>
+                    <p>Each deliverable is <em>scheduled</em>. You don't have to wait months to see results.</p>
+
+                    <span class="fa-stack fa-2x wow bounceIn text-primary">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <strong class="fa-stack-1x fa-inverse">3</strong>
+                    </span>
+
+                    <p>After each deliverable, we get your feedback. You stay in control of the process.</p>
                 </div>
             </div>
         </div>
@@ -483,8 +521,8 @@
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
                     <img src="img/portrait.jpg" alt="">
-                    <p>Have a project you need to see delivered? Call or email me, Eddie Bowen.</p>
-                    <p>Just want to meet to learn more about us? That's cool too!</p>
+                    <p>That project isn't going to develop itself. Call or email me, Eddie Bowen.</p>
+                    <p>Just want to meet to learn more about Default Company? That's cool too!</p>
                     <hr class="primary">
                 
                 </div>
