lots of changes

--- a/clients/dooley/index.html
+++ b/clients/dooley/index.html
@@ -9,21 +9,25 @@
     <meta name="author" content="">
     <title>Dooley Pitch Site</title>
     <!-- icons -->
-    <link rel="icon" href="../img/icons/dc_16.png" sizes="16x16" type="image/png">
-    <link rel="icon" href="../img/icons/dc_32.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="../img/icons/dc_48.png" sizes="48x48" type="image/png">
-    <link rel="icon" href="../img/icons/dc_62.png" sizes="62x62" type="image/png">
-    <link rel="apple-touch-icon" href="../img/icons/dc_120.png" sizes="120x120" type="image/png">
+    <link rel="icon" href="img/icons/dc_16.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="img/icons/dc_32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="img/icons/dc_48.png" sizes="48x48" type="image/png">
+    <link rel="icon" href="img/icons/dc_62.png" sizes="62x62" type="image/png">
+    <link rel="apple-touch-icon" href="img/icons/dc_120.png" sizes="120x120" type="image/png">
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+
     <!-- Custom Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
     <!-- Plugin CSS -->
-    <link rel="stylesheet" href="../css/animate.min.css" type="text/css">
+    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/main.css" type="text/css">
+    
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -76,43 +80,34 @@
     </header>
     <section id="about">
         <div class="container">
-            <!--
-            <div class="col-lg-6 col-lg-offset-3 text-center">
-                <h2 class="section-heading">We live downtown</h2>
-                <p>We focus on the revitalized neighborhoods of downtown Columbus; the Short North, Victorian Village, Italian Village, Harrison West and German Village to name a few.</p>
-                <p>From our 5th Avenue office we offer a warm and friendly service with an emphasis on personal attention to our clients.</p>
-                <p>For over 30 years, the Dooley &amp; Co Team has helped hundreds of people buy and sell their homes. Older homes, new builds, condos, lofts and more. We do it all.</p>
-                <p>We appreciate the opportunity to earn your business and will give you the personal service you deserve.</p>
-            </div>
-            -->
 
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">We live downtown</h2>
             </div>
 
             <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-location-arrow wow bounceIn text-primary"></i>
                         <h3>Local</h3>
                         <p class="text-muted">We focus on the revitalized neighborhoods of downtown Columbus; the Short North, Victorian Village, Italian Village, Harrison West and German Village to name a few.</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-smile-o wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>Friendly</h3>
                         <p class="text-muted">From our 5th Avenue office we offer a warm and friendly service with an emphasis on personal attention to our clients.</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-home wow bounceIn text-primary" data-wow-delay=".2s"></i>
                         <h3>Reliable</h3>
                         <p class="text-muted">For over 30 years, the Dooley &amp; Co Team has helped hundreds of people buy and sell their homes. Older homes, new builds, condos, lofts and more. We do it all.</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Dedicated</h3>
@@ -127,7 +122,7 @@
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Featured properties</h2>
             </div>
-            <div class="col-lg-6 col-lg-offset-3">
+            <div class="col-lg-8 col-lg-offset-2">
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
@@ -206,11 +201,11 @@
                     </div>
                     <!-- Left and right controls -->
                     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <i class="fa fa-2x fa-angle-left"></i>
                         <span class="sr-only">Previous</span>
                     </a>
                     <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <i class="fa fa-2x fa-angle-right"></i>
                         <span class="sr-only">Next</span>
                     </a>
                     <ol class="carousel-indicators">
@@ -220,6 +215,9 @@
                         <li data-target="#myCarousel" data-slide-to="3"></li>
                     </ol>
                 </div>
+            </div>
+            <div class="col-lg-12 text-center">
+                <a href="#about" class="btn btn-primary btn-xl">Search more properties</a>
             </div>
         </div>
     </section>
@@ -231,8 +229,8 @@
             <div class="col-lg-4 col-lg-offset-2">
                 <h3>Bruce Dooley, CRS</h3>
                 <img src="img/bruce_small.png" />
-                <p>bruce@dooleyco.com</p>
-                <p>614.297.8600</p>
+                <p><a href="mailto:bruce@dooleyco.com">bruce@dooleyco.com</a></p>
+                <p><i class="fa fa-phone"></i> 614-297 8600</p>
                 <p>Bruce has lived in the Downtown/Short North area since 1979. He has seen (and been part of) the HUGE change in the area over the past 30+ years.</p>
                 <p>Before joining Keller Williams Classic Properties, Bruce owned Dooley &amp; Company Realtors for 27 years. He is consistently ranked in the top 25 agents of CBR based on information from MLS. He has received the highest sales award given by CBR, the 25 Million Dollar award, &amp; Realtor Broker of the Year for CBR in 1997.</p>
                 <p>In 2005, Bruce was inducted as a Charter Member of CBR, receiving the Lifetime Achievement Award.</p>
@@ -241,8 +239,8 @@
             <div class="col-lg-4">
                 <h3>Chris Zuelke</h3>
                 <img src="img/chris_small.png" />
-                <p>czuelke@dooleyco.com</p>
-                <p>614.297.8611</p>
+                <p><a href="mailto:czuelke@dooleyco.com">czuelke@dooleyco.com</a></p>
+                <p><i class="fa fa-phone"></i> 614-297 8611</p>
                 <p>Chris Zuelke has lived downtown since she moved to Columbus to attend the Ohio State University in 1990.</p>
                 <p>She has worked with Bruce since 2003, first with Dooley and Company Realtors and now with the Dooley and Company Team at Keller Williams Classic Properties.</p>
                 <p>Chris lives in Italian Village and is active in the community, supporting various neighborhood organizations and events.</p>
@@ -260,13 +258,13 @@
         </div>
     </section>
     <!-- jQuery -->
-    <script src="../js/jquery.js"></script>
+    <script src="js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- Plugin JavaScript -->
-    <script src="../js/jquery.easing.min.js"></script>
-    <script src="../js/jquery.fittext.js"></script>
-    <script src="../js/wow.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/jquery.fittext.js"></script>
+    <script src="js/wow.min.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="js/main.js"></script>
     <script src="js/typed.js"></script>
