--- a/index.html
+++ b/index.html
@@ -181,14 +181,14 @@
                             <li class="item">Twitter API</li>
                             <li class="item">Amazon AWS</li>
                             <li class="item">Google App Engine</li>
-                            <li class="item">Bootstrap</li>
+                            <li class="item">Bootstrap.js</li>
                             <li class="item">Angular.js</li>
                             <li class="item">Postgres</li>
-                            <li class="item">Wordpress</li>
+                            <li class="item">Trello</li>
                             <li class="item">MongoDB</li>
                             <li class="item">Swift</li>
                             <li class="item">Google Maps API v3</li>
-                            <li class="item">Azure</li>
+                            <li class="item">Ghost</li>
                         </ul>
                     </div>
                 </div>
