add mail section

--- a/index.html
+++ b/index.html
@@ -211,14 +211,14 @@
                         <strong class="fa-stack-1x fa-inverse">1</strong>
                     </span>
 
-                    <p>We start every product with a placeholder and a URL. You have something you can look at, show your colleagues, get opinions on.</p>
+                    <p>We start every product by hosting a <em>minimum viable product</em>. You have something you can look at, show your colleagues, get opinions on.</p>
 
                     <span class="fa-stack fa-2x wow bounceIn text-primary">
                         <i class="fa fa-circle fa-stack-2x"></i>
                         <strong class="fa-stack-1x fa-inverse">2</strong>
                     </span>
 
-                    <p>We then <em>develop</em> that product by iteration, from placeholder to prototype to finished product.</p>
+                    <p>We then <em>develop</em> that product by iteration, from MVP to finished product.</p>
                     <p>Each deliverable is <em>scheduled</em>. You don't have to wait months to see results.</p>
 
                     <span class="fa-stack fa-2x wow bounceIn text-primary">
@@ -226,7 +226,7 @@
                         <strong class="fa-stack-1x fa-inverse">3</strong>
                     </span>
 
-                    <p>After each deliverable, we get your feedback. You stay in control of the process.</p>
+                    <p>We run a Trello board for each project. You can keep track of work being done. You stay in control of the process.</p>
                 </div>
             </div>
         </div>
